Add translation extraction

--- a/locales/en/blog.json
+++ b/locales/en/blog.json
@@ -1,5 +1,6 @@
 {
-    "blogPageSeoTitle": "Blogs list page",
-    "blogPostHeading": "My blogs",
-    "textPage": "Text for list blogs page"
+  "blogPageSeoTitle": "Blog Page Seo Title",
+  "blogPostHeading": "blogPostHeading",
+  "textPageBlog1": "textPageBlog1",
+  "textPageBlog2": "textPageBlog2"
 }
