--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,5 +1,4 @@
 {
-    "homePageSeoTitle": "Home page title",
-    "homePageHeading": "Home page header",
-    "textPage": "I'm making this by following the Gatsby Tutorial."
+  "homePageSeoTitle": "homePageSeoTitle",
+  "textPage": "textPage"
 }
