--- a/locales/en/blog.json
+++ b/locales/en/blog.json
@@ -1,6 +1,5 @@
 {
-  "blogPageSeoTitle": "Blog Page Seo Title",
-  "blogPostHeading": "blogPostHeading",
-  "textPageBlog1": "textPageBlog1",
-  "textPageBlog2": "textPageBlog2"
+    "blogPageSeoTitle": "Blogs list page",
+    "blogPostHeading": "My blogs",
+    "textPage": "Text for list blogs page"
 }
