Add translation for mdx files

--- a/blog/another-post/index.uk.mdx
+++ b/blog/another-post/index.uk.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Another Post"
+title: "Інший пост"
 date: "2021-07-24"
 slug: "another-post"
 hero_image: "./blog_2.jpg"
-hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
+hero_image_alt: "Альт до картинки"
 hero_image_credit_text: "Christopher Ayme"
 hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
-
-<h4>Here's another post! It's even better than the first one!</h4>
+#### Це текст іншого посту для тестового проекту!
