--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,5 +1,4 @@
 ---
-lang: 'en'
 title: "My First Post"
 date: "2021-07-23"
 slug: "my-first-post"
@@ -9,9 +8,9 @@ hero_image_credit_text: "Christopher Ayme"
 hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
-This is my first blog post! Isn't it *great*?
+#### This is my first blog post! Isn't it great?
 
-Some of my **favorite** things are:
+<p>Some of my **favorite** things are:</p>
 
 * Petting dogs
 * Singing
