--- a/blog/my-first-post/index.uk.mdx
+++ b/blog/my-first-post/index.uk.mdx
@@ -1,5 +1,4 @@
 ---
-lang: 'uk'
 title: "Мій перший пост"
 date: "2021-07-23"
 slug: "my-first-post"
@@ -9,9 +8,9 @@ hero_image_credit_text: "Christopher Ayme"
 hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
-Це мій перший пост який буде згенеровано за допомогою гетсбі. Чи це не чудово?
+#### Це мій перший пост який буде згенеровано за допомогою гетсбі. Чи це не чудово?
 
-Деякі з моїх **улюблених** речей :
+<p>Деякі з моїх улюблених речей:</p>
 
 * Гладити собак
 * Співати
