--- a/blog/yet-another-post/index.mdx
+++ b/blog/yet-another-post/index.mdx
@@ -8,4 +8,4 @@ hero_image_credit_text: "Christopher Ayme"
 hero_image_credit_link: "https://unsplash.com/photos/ocZ-_Y7-Ptg"
 ---
 
-Wow look at all this content. How do they do it?
+<p>Wow look at all this content. How do they do it?</p>
