Adjust babel-extract config

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,4 +1,5 @@
 {
+  "This is bottom text of home page": "This is bottom text of home page",
   "homePageHeading": "Home page header",
   "homePageSeoTitle": "Home page title",
   "textPage": "I'm making this by following the Gatsby Tutorial."
