--- a/locales/uk/common.json
+++ b/locales/uk/common.json
@@ -1,9 +1,9 @@
 {
   "en": "English",
-  "uk": "Українська",
   "mainMenu": {
-    "home": "Головна",
     "about": "Про автора",
-    "blog": "Блог"
-  }
+    "blog": "Блог",
+    "home": "Головна"
+  },
+  "uk": "Українська"
 }
