Edit final version of implementation

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -1,5 +1,4 @@
 {
-    "aboutPageSeoTitle": "About me page",
-    "aboutPageHeading": "About page",
-    "textPage": "Hi there! I'm the proud creator of this site, which I built with Gatsby."
+  "About page seo title": "About page seo title",
+  "Hi! Are you ready to make some sort of magic to implement translations for all hardcoded phrases?": "Hi! Are you ready to make some sort of magic to implement translations for all hardcoded phrases?"
 }
