--- a/locales/en/blog.json
+++ b/locales/en/blog.json
@@ -1,5 +1,6 @@
 {
-    "blogPageSeoTitle": "Blogs list page",
-    "blogPostHeading": "My blogs",
-    "textPage": "Text for list blogs page"
+  "Below you can see all blogs sorted by its language": "Below you can see all blogs sorted by its language",
+  "Blogs page seo title": "Blogs page seo title",
+  "But initialy this list is empty": "But initialy this list is empty",
+  "Here is the list of blogs preview": "Here is the list of blogs preview"
 }
