--- a/locales/uk/common.json
+++ b/locales/uk/common.json
@@ -1,9 +1,5 @@
 {
-  "en": "English",
-  "uk": "Українська",
-  "mainMenu": {
-    "home": "Головна",
-    "about": "Про автора",
-    "blog": "Блог"
-  }
+  "About": "Про автора",
+  "Blog": "Блоги",
+  "Home": "Головна"
 }
